feat/fix: add buttons to add tasks, finish and exclude / fix table content

--- a/app/frontend/src/components/TaskTable/styles.css
+++ b/app/frontend/src/components/TaskTable/styles.css
@@ -1,9 +1,9 @@
 .table-task-container {
-  height: 80vh;
-  width: 85vw;
-  margin-left: 7vw;
   background-color: rgba(9, 76, 46, 0.036);
   border-radius: 25px;
+  height: 75vh;
+  margin-left: 7vw;
+  width: 90vw;
 }
 
 .table-title {
@@ -11,18 +11,18 @@
 }
 
 .task-table {
-  width: 100%;
   border-collapse: collapse;
+  width: 100%;
 }
 
 .task-table th {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgba(27, 76, 9, 0.615);
   height: 5vh;
 }
 
 .task-table td {
-  height: 5vh;
   font-size: 20px;
+  height: 5vh;
 }
 
 .headers-row {
@@ -40,4 +40,10 @@
 .description-table-head {
   text-align: center;
   width: 30vw;
+}
+
+.buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
