--- a/app/frontend/src/components/Button/styles.css
+++ b/app/frontend/src/components/Button/styles.css
@@ -3,6 +3,7 @@
   border-radius: 25px;
   color: white;
   cursor: pointer;
+  font-size: 15px;
   padding: 10px;
   text-align: center;
 }
@@ -13,6 +14,7 @@
   border-radius: 25px;
   color: #036b52;
   cursor: pointer;
+  font-size: 15px;
   padding: 10px;
   text-align: center;
 }
